--- a/assets/scss/animations/_loader-animation.scss
+++ b/assets/scss/animations/_loader-animation.scss
@@ -1,12 +1,3 @@
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 @keyframes fadeOut {
   0% {
     opacity: 1;
@@ -14,24 +5,7 @@
   100% {
     opacity: 0;
     visibility: hidden;
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes removeBlur {
-  0% {
-    filter: blur(10px);
-  }
-  100% {
-    filter: blur(0);
+    //better to use display: none;
   }
 }
 
