--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -232,12 +232,9 @@
 
     label {
       cursor: pointer;
-      font-size: 1.5rem;
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 40px;
-      height: 40px;
       position: relative;
     }
   }
