--- a/assets/scss/pages/restaurant.scss
+++ b/assets/scss/pages/restaurant.scss
@@ -61,7 +61,6 @@ p {
 
     .restaurant__favorite-label {
       cursor: pointer;
-      flex: 0 0 50px;
       display: flex;
     }
   }
